--- a/new_ui/player_regis.html
+++ b/new_ui/player_regis.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Danh sách mùa giải</title>
+	<title>Đăng ký cầu thủ</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
 	<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
@@ -99,38 +99,113 @@
 			</div>
 		</div>
 
-
 		<div class="main-wrapper">
 			<!-- Header -->
 			<header class="header d-flex flex-column justify-content-center px-4">
 				<h5 class="m-0 fw-semibold text-uppercase">Vô địch quốc gia Night Wolf 2023</h5>
 			</header>
 
+			<style>
+				#new-player-btn.active {
+					color: rgb(9, 196, 9);
+				}
+			</style>
+
 			<!-- Main -->
 			<div class="main">
 
-				<!-- Danh sách mùa giải -->
+				<!-- Đăng ký đội bóng -->
 
 				<div class="d-flex flex-column gap-4 p-4">
-					<h5 class="m-0">Danh sách mùa giải</h5>
+					<h5 class="m-0">Đăng ký cầu thủ</h5>
 
+					<div class="m-auto bg-white shadow rounded-2" style="width: 800px;">
+						<div class="d-flex justify-content-between p-4">
+							<div class="input-group w-50">
+								<i class="fa-solid fa-magnifying-glass input-group-text pt-2"></i>
+								<input type="text" class="form-control" placeholder="Tìm cầu thủ các mùa trước...">
+							</div>
+							<button id="new-player-btn" class="fs-6 active"><i class="fa-solid fa-circle-check"></i>
+								Đăng
+								ký mới</button>
+						</div>
+						<hr class="m-0" />
+						<form>
+							<div class="row g-4 p-4">
+								<div class="col-6">
+									<div class="mb-3">
+										<label class="fs-8 mb-1">Ảnh chụp chân dung</label>
+										<input class="form-control" type="file" id="formFile">
+									</div>
+									<div class="image-preview img-thumbnail" style="height: 308px; width: auto;">
+										<img class="d-block"
+											src="https://www.mancity.com/meta/media/vw0b1q45/ruben-dias.png">
+									</div>
+								</div>
+								<div class="col-6">
+									<div class="d-flex flex-column gap-3">
+										<div>
+											<label class="fs-8 mb-1">Tên cầu thủ</label>
+											<div class="input-group">
+												<input type="text" class="form-control">
+											</div>
+										</div>
+										<div>
+											<label class="fs-8 mb-1">Ngày sinh</label>
+											<div class="input-group">
+												<input type="date" class="form-control">
+											</div>
+										</div>
+										<div>
+											<label class="fs-8 mb-1">Quốc tịch</label>
+											<div class="input-group">
+												<input type="text" class="form-control">
+											</div>
+										</div>
+										<div>
+											<label class="fs-8 mb-1">Vị trí</label>
+											<select class="form-select" aria-label="Default select example">
+												<option selected>--- Chọn vị trí ---</option>
+												<option value="1">Hậu vệ</option>
+												<option value="2">Tiền vệ</option>
+												<option value="3">Tiền đạo</option>
+											</select>
+										</div>
+										<div>
+											<label class="fs-8 mb-1">Đội bóng</label>
+											<select class="form-select" aria-label="Default select example">
+												<option selected>--- Chọn đội bóng ---</option>
+												<option value="1">One</option>
+												<option value="2">Two</option>
+												<option value="3">Three</option>
+											</select>
+										</div>
+									</div>
+								</div>
+							</div>
+							<hr class="m-0" />
+							<div class="p-4">
+								<button class="btn btn-primary float-end d-block mb-4">Đăng ký</button>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
-		<script>
-			$(() => {
-				// Sidebar
-				$('.menu-item').on({
-					click: function (event) {
-						$('.menu-item').removeClass('active');
-						$(this).addClass('active');
-						$('.submenu').removeClass('active');
-						$(this).parent().parent('.submenu').addClass('active');
-					}
-				})
-			})
-		</script>
 	</div>
+	<script>
+		$(() => {
+			// Sidebar
+			$('.menu-item').on({
+				click: function (event) {
+					$('.menu-item').removeClass('active');
+					$(this).addClass('active');
+					$('.submenu').removeClass('active');
+					$(this).parent().parent('.submenu').addClass('active');
+				}
+			})
+		})
+	</script>
 </body>
 
 </html>
