--- a/new_ui/standings.html
+++ b/new_ui/standings.html
@@ -119,7 +119,7 @@
                     object-fit: cover;
                 }
 
-                .standing td {
+                .standings td {
                     vertical-align: middle;
                 }
             </style>
